[project]
name = "cassandra-twitter-mcp"
version = "0.2.0"
description = "Consolidated Twitter MCP server — Grok synthesis + X API v2 + personal account via twitter-cli"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "twitter-cli>=0.8.0",
]

[project.scripts]
cassandra-twitter-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clients", "tools"]
include = ["server.py", "config.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
